# back2tournament/src/Authentication/ApiToken/Domain/Entity/ApiTokenId.php
@@ -1,0 +1,11 @@
+<?php
+
+declare(strict_types=1);
+
+namespace App\Authentication\ApiToken\Domain\Entity;
+
+use App\Shared\ValueObject\AggregateRootId;
+
+final class ApiTokenId extends AggregateRootId
+{
+}
